--- a/css/style.css
+++ b/css/style.css
@@ -101,10 +101,29 @@ nav a {
   width: 80%;
   margin: auto;
 }
-table {
-  position: relative;
-  margin: auto;
-} 
+
+.grid_container {
+  display: grid;
+  grid-template-columns: auto auto;
+  padding: 10px;
+}
+.grid-item {
+  padding: 10px;
+  font-size: 15px;
+  text-align: center;
+}
+.grid-item-image {
+  width: 100%;
+  height: 100%;
+}
+.grid-item-image img:hover + .hide {
+  display: block;
+  font-size: 30px;
+  color: red;
+}
+.hide {
+  display: none;
+}
 /*footer*/
 footer {
   overflow: hidden;
