--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,18 @@ nav {
 
 /*body*/
 
+.larger_p {
+  font-size: 2.5rem;
+}
+
+.medium_p {
+  font-size: 1.5rem;
+}
+
+.small_p {
+  font-size: 1.0rem;
+}
+
 /*index header, about*/
 
 
@@ -598,6 +610,9 @@ footer {
     width: 26vw;
   }
 
+  .about_img {
+    width: 20vw;
+  }
 
 
   
